Add screenshot feature with floating glyph

--- a/index.html
+++ b/index.html
@@ -285,8 +285,27 @@
         .data-barcode-strip { display: flex; align-items: flex-end; height: 1.2em; }
         .status-light-array-content { display: grid; grid-template-columns: repeat(auto-fill, minmax(0.8em, 1fr)); gap: 1px; align-content: flex-start; padding: 2px;}
         .glyph-waterfall-content { display: flex; justify-content: space-around; overflow: hidden; }
-        .glyph-waterfall-column { line-height: 1; animation: fall 5s linear infinite; }
-        @keyframes fall { 0% { transform: translateY(-100%); opacity: 0; } 10% { opacity: 1;} 90% { opacity: 1;} 100% { transform: translateY(100%); opacity: 0;} }
+.glyph-waterfall-column { line-height: 1; animation: fall 5s linear infinite; }
+@keyframes fall { 0% { transform: translateY(-100%); opacity: 0; } 10% { opacity: 1;} 90% { opacity: 1;} 100% { transform: translateY(100%); opacity: 0;} }
+
+        #screenshotButton {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            width: 2.2em;
+            height: 2.2em;
+            background-color: var(--button-default-bg);
+            border: 1px solid var(--button-default-border);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: background-color 0.15s;
+        }
+        #screenshotButton:hover {
+            background-color: rgba(var(--base-phosphor-color-rgb), 0.2);
+        }
     </style>
 </head>
 <body>
@@ -295,6 +314,9 @@
 
     <div id="dashboardRoot">
         </div>
+    <div id="screenshotButton" title="Save Screenshot">
+        <svg class="alien-glyph"><use href="#g18"></use></svg>
+    </div>
 
     <script>
         // --- Global flag to prevent concurrent dashboard builds ---
@@ -2957,6 +2979,17 @@ function createQuantumEntanglementPanel(areaName) {
             }
         });
 
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+    <script>
+      document.getElementById('screenshotButton').addEventListener('click', () => {
+        html2canvas(document.getElementById('dashboardRoot')).then(canvas => {
+          const link = document.createElement('a');
+          link.href = canvas.toDataURL('image/png');
+          link.download = 'alien-dashboard.png';
+          link.click();
+        });
+      });
     </script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1CQ4D3VQ3L"></script>
 <script>
